--- a/packages/yhub_ui/pubspec.yaml
+++ b/packages/yhub_ui/pubspec.yaml
@@ -1,6 +1,6 @@
 name: yhub_ui
 description: A new Flutter package project.
-version: 0.1.3
+version: 0.1.4
 author: hsul4n
 homepage: https://github.com/hsul4n/yhub-flutter/tree/master/packages/yhub_ui
 
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
 
   intl: ^0.17.0
-  otp_text_field: ^1.1.0
+  sms_autofill: ^1.3.1
 
 dev_dependencies:
   flutter_test:
